Fixed test cases and made term & condition link more visible

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -36,6 +36,14 @@ section#signup {
       display: block;
    	  padding-top: 0.5rem;
     }
+
+    a{
+      color: teal;
+
+      &:hover{
+        text-decoration: underline;
+      }
+    }
   }
 }
 
